cmake_minimum_required(VERSION 3.4)

project(Program)

#Ustaw we własnej zmiennej SOURCE_FILES zbiór plików źródłowych projektu
set(SOURCE_FILES src/main.cpp ../library/include/math_helpers.h ../library/src/math_helpers.cpp ../library/include/model/client.h ../library/src/model/client.cpp)

#Włącz powyższy zbiór plików do zbudowania programu wykonywalnego Program
add_executable(Program ${SOURCE_FILES})

#Dołącz katalog include podprojektu Program do globalnej listy. Dzięki temu każdy inny podprojekt będzie ten katalog "widział"

target_include_directories(Program PUBLIC include)

#Określenie zależności pomiędzy projektami Program i Biblioteka
target_link_libraries(Program Library)
enable_testing()